--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,13 @@ addons:
         packages:
             - tree
 before_install:
-    - test "${TRAVIS_OS_NAME}" = "osx" && brew update || true
-    - test "${TRAVIS_OS_NAME}" = "osx" && brew install tree || true
+    - test "${TRAVIS_OS_NAME}" = "osx" && brew update; true
+    - test "${TRAVIS_OS_NAME}" = "osx" && brew install tree; true
+    - test "${TRAVIS_OS_NAME}" = "osx" && test "${CC}" = "gcc" && export CC="gcc"; true
 script:
-    - export CC="${CC}" TEST_PREFIX="`pwd`/test_prefix"
-    - make CC="$CC" PREFIX="$TEST_PREFIX"
-    - make CC="$CC" PREFIX="$TEST_PREFIX" install
-    - tree "$TEST_PREFIX"
-    - rm -r "$TEST_PREFIX"
+    - export CC="${CC}" TEST_PREFIX="$(pwd)/test_prefix"
+    - make CC="${CC}" PREFIX="${TEST_PREFIX}"
+    - make CC="${CC}" PREFIX="${TEST_PREFIX}" install
+    - tree "${TEST_PREFIX}"
+    - rm -r "${TEST_PREFIX}"
     - make clean
